Updating specs to correct some issues with app ID.
